<resources>
<string name="app_name">4) 28June_Phone_Insurance_Renewal_Layout_You3</string>
    <string name="pending_activation">Pending Activation</string>
    <string name="_2_september_2020">2 September, 2020</string>
    <string name="status_expired">Status Expired</string>
    <string name="nexus_5_insurance">Nexus 5 Insurance</string>
    <string name="active_insurance_now">Active Insurance now</string>
    <string name="all_drops_and_brekerage_including_cracker_screen">All drops and breakage including cracked screen</string>
    <string name="coverage">Coverage</string>
</resources>