<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPending"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#C4C4C4"
        android:gravity="center"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:text="@string/pending_activation"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/ic_vector"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/_2_september_2020"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/expired"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDate"
            android:background="@color/white"
            android:text="@string/status_expired"
            android:textColor="#FE122E"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivOffPhone"
            android:layout_width="match_parent"
            android:foregroundGravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expired"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="150dp"
            android:background="@color/white"
            android:src="@drawable/ic_emojione_monotone_mobile_phone_off" />

        <TextView
            android:id="@+id/tvn5a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivOffPhone"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/white"
            android:foregroundGravity="center"
            android:text="@string/nexus_5_insurance"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvacn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tvn5a"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="35dp"
            android:background="#18F148"
            android:gravity="center"
            android:text="@string/active_insurance_now"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvdetails"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_below="@id/tvacn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="37dp"
            android:background="#C4C4C4"
            android:paddingStart="25dp"

            android:text="Device :                                      LGE Nexus 5
            Insurance term :                          12 months "
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvCoverage"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_below="@id/tvdetails"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:text="@string/coverage"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tvcondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCoverage"
            android:layout_marginTop="0dp"
            android:background="#C4C4C4"
            android:gravity="start"
            android:padding="18dp"
            android:paddingStart="30dp"
            android:text="@string/all_drops_and_brekerage_including_cracker_screen"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

</LinearLayout>